fix range slider shadow (overflow hidden)

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -152,14 +152,8 @@ body {
   gap: 15px;
 }
 
-.range-slider-wrapper {
-  padding: 5px 0;
-  overflow: hidden;
-  flex-grow: 1;
-}
-
 .range-slider {
-  width: 100%;
+  flex-grow: 1;
   cursor: pointer;
 }
 
